libs/extractor/src/snapshots/extractor__tests__style_order.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n    <Box styleOrder={20} p=\"4\" _hover={{ bg: [\"red\", \"blue\"]}} selectors={{\n    \"*[aria-diabled='true'] &\": {\n      opacity: 0.5\n      }\n    }} />\n            \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 1,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "opacity",
                value: ".5",
                level: 0,
                selector: Some(
                    Selector(
                        "*[aria-diabled='true'] &",
                    ),
                ),
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "16px",
                level: 0,
                selector: None,
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment74) => <div className={`OHb71ilm8xtbji8jse OHadz87g0f09tszos4 ${__devupAssignment74?.[0] ?? \"\"}`} style={{ ...__devupAssignment74?.[1] }} />)(((__devupField0) => [\n\t__devupField0?.[0] ?? \"\",\n\t__devupField0?.[1],\n\t{ bg: __devupField0?.[2] }\n])(((__devupLevel0, __devupLevel1) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1]\n\t},\n\t[__devupLevel0?.[2], __devupLevel1?.[2]]\n])(((__devupValue) => [\n\t\"OHcfz0htuxoqdgi1kj\",\n\t{},\n\t__devupValue\n])(\"red\"), ((__devupValue) => [\n\t\"OHb02n1aqltr7ut56_\",\n\t{},\n\t__devupValue\n])(\"blue\"))));\n",
}
