libs/extractor/src/snapshots/extractor__tests__style_order_conditional-2.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n<Box styleOrder={isActive ? 5 : order} bg=\"red\" p=\"4\" />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).map(ToBTreeSet::from).map_err(|error| error.to_string())"
---
Err(
    "test.jsx:2:33: `<Box>` cannot use `isActive ? 5 : order` at build time: `styleOrder` must be a number, or a condition choosing between numbers, since the stylesheet places rules by it before the code runs",
)
