libs/extractor/src/snapshots/extractor__tests__style_order_conditional-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n<Box styleOrder={isActive ? 5 : 10} bg={isActive ? \"red\" : \"blue\"} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    5,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    10,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    5,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    10,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupSpread0, __devupAssignment75) => <div className={__devupSpread0 ? __devupAssignment75?.[0] ?? \"\" : __devupAssignment75?.[3] ?? \"\"} style={{ ...__devupAssignment75?.[1] }} />)(isActive, isActive ? ((__devupValue) => [\n\t\"OHa89wox_nbrhu2c7z\",\n\t{},\n\t__devupValue,\n\t\"OHaul3757sy94oo6q8\"\n])(\"red\") : ((__devupValue) => [\n\t\"OHaibwkfvzf5vl6wgl\",\n\t{},\n\t__devupValue,\n\t\"OHc5_bifo5qvqfhuzr\"\n])(\"blue\"));\n",
}
